# evergrowth

./: .gitignore  ARCHITECTURE.md  README.md  create_meta_skill.py  create_more_skills.py  create_skills.py  evergrowth.bat  pyproject.toml
config/: default.json  di_config.json
deploy/: activity_presence_detector.py  browser_activity_producer.py  evergrowth_presence_daemon.py  openclaw_transcript.py  runtime_status.py  runtime_supervisor.py  service_heartbeat.py  start_persistent_evergrowth.cmd  supervised_service.py
docs/: continuity-spec.md
evergrowth/: __init__.py  __main__.py  discord_watcher.py  opencode_adapter.py
foxpur/: __init__.py
notes/: heartbeat-context-duplication-2026-07-17.md
tests/: __init__.py  conftest.py  test_activity_presence_detector.py  test_autonomy_coordinator.py  test_browser_activity_producer.py  test_capture_queue.py  test_config.py  test_context_reconstruct.py  test_di_loop_plan.py  test_di_loop_system_prompt.py  test_emotions.py  test_experiments.py  test_heartbeat_engine.py  test_hermes_delegate_session_binding.py  test_hermes_provider.py  test_identity.py  test_integration.py  test_memory.py  test_mission_layer.py  test_openclaw_transcript.py  test_persistence_dedup.py  test_presence.py  test_presence_daemon.py  test_presence_wiring.py  test_reconstruct.py  test_runtime_persistence_mode.py  test_runtime_singleton.py  test_runtime_status.py  test_runtime_supervisor.py  test_runtime_telemetry.py  test_selfprompt.py  test_selfprompt_presence.py  test_selfprompt_significance.py  test_skills.py  test_supervised_service.py  test_traces.py  (+2 more)
(+39 files in other folders)
