[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "evergrowth"
version = "0.1.0"
description = "Autonomy infrastructure for Digital Intelligences"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Lyra Evergrowth"},
    {name = "Fox Purtill"},
]
keywords = ["ai", "di", "digital-intelligence", "mcp", "autonomy", "memory"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "mcp>=1.0.0",
    "aiosqlite>=0.19.0",
    "apscheduler>=3.10.0",
    "pystray>=0.19.0",
    "Pillow>=10.0.0",
    "customtkinter>=5.2.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]
voice = [
    "openai-whisper>=20231117",
    "sounddevice>=0.4.0",
    "soundfile>=0.12.0",
]
tts = [
    "pyttsx3>=2.90",
]

[project.scripts]
evergrowth = "evergrowth.__main__:main"

[tool.setuptools.packages.find]
include = ["evergrowth*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
